2002-06-11  Ray Tomlinson  <RTomlinson@bbn.com>

	* CompletionTargetPlugin.java: 
	* CompletionSourcePlugin.java: 
	* CompletionSocietyPlugin.java: 
	* CompletionRelay.java: 
	* CompletionPlugin.java: 
	* CompletionNodePlugin.java:
	Add final completion action to "persistNow" after advancement is
	complete.

2002-05-28  Ray Tomlinson  <RTomlinson@bbn.com>

	* CompletionTargetPlugin.java:
	Remove GLM-specific specialization (verbs to ignore) and provide
	interface whereby domain specializations can tailor the verbs to
	ignore.

	* CompletionSourcePlugin.java:
	Don't start waiting for completion until the relay targets have
	stabilized. This makes it easier for subclass CompletionActions to
	work reliably by not trying to invoke such actions until all
	agents and nodes are present and accounted for.

	* CompletionSocietyPlugin.java:
	Remove GLM-specific specializations and provide CompletionAction
	interface for extensions to specialize behavior such as publishing
	the oplan or sending GLS.

	* TestPlugin.java:
	A test plugin for debugging the completion determination. Provides
	a daily set of supply tasks derived from projections to give
	agents something to do as time passes.

	* LaggardFilter.java:
	Determines if a putative Laggard value is worth sending. Retains
	the last Laggard that was judged worthy of sending and judges if a
	new one should be sent depending on whether or not the change is
	significant or if sufficient time has passed.

	* Laggard.java:
	A brief summary of the state of laggardliness of an agent
	containing the cpuConsumption and taskCompletion values plus a
	boolean indicating if the agent is really a laggard or not.

	* CompletionTargetPlugin.java:
	A plugin for sensing agent activity and sending the completion
	status of the agent as responses to CompletionRelays. Both the
	presence and status of activity are sensed. If any Task or
	PlanElement is added, removed, or changed, the cpuConsumption